basiliq/src/serve/tests/requests/select/objs/snapshots/basiliq__serve__tests__requests__select__objs__sparse__sparse_other_all_empty.snap
---
source: basiliq/src/serve/tests/requests/select/objs/sparse.rs
expression: res

---
{
  "jsonapi": {
    "version": "1.0"
  },
  "data": [
    {
      "type": "public__peoples",
      "id": "1649b1e9-8a5f-4f52-b331-c07ce3bccc6f",
      "relationships": {
        "public__articles": {
          "data": [
            {
              "type": "public__articles",
              "id": "fdf715dd-8772-498c-8196-6f4ccb64edef"
            },
            {
              "type": "public__articles",
              "id": "2dbf5d1a-b029-4456-af6b-339c75b1089c"
            }
          ]
        }
      }
    },
    {
      "type": "public__peoples",
      "id": "777cc565-c66b-4942-ab44-8fc5f194b804",
      "relationships": {
        "public__articles": {
          "data": {
            "type": "public__articles",
            "id": "46c4fe50-8c56-4f26-935e-56ccfa496bb5"
          }
        }
      }
    },
    {
      "type": "public__peoples",
      "id": "961e543a-4b22-4d48-a8e5-c1eafada950f"
    }
  ],
  "included": [
    {
      "type": "public__articles",
      "id": "2dbf5d1a-b029-4456-af6b-339c75b1089c"
    },
    {
      "type": "public__articles",
      "id": "46c4fe50-8c56-4f26-935e-56ccfa496bb5"
    },
    {
      "type": "public__articles",
      "id": "fdf715dd-8772-498c-8196-6f4ccb64edef"
    }
  ]
}
