basiliq/src/serve/tests/requests/select/objs/snapshots/basiliq__serve__tests__requests__select__objs__sparse__sparse_self_single.snap
---
source: basiliq/src/serve/tests/requests/select/objs/sparse.rs
expression: res

---
{
  "jsonapi": {
    "version": "1.0"
  },
  "data": [
    {
      "type": "public__peoples",
      "id": "1649b1e9-8a5f-4f52-b331-c07ce3bccc6f",
      "attributes": {
        "first-name": "Francis"
      }
    },
    {
      "type": "public__peoples",
      "id": "777cc565-c66b-4942-ab44-8fc5f194b804",
      "attributes": {
        "first-name": "Somebody"
      }
    },
    {
      "type": "public__peoples",
      "id": "961e543a-4b22-4d48-a8e5-c1eafada950f",
      "attributes": {
        "first-name": "AAAAAAAA"
      }
    }
  ]
}
